packages/typ/tests/fixtures/diagnostics/0110_core_and_int_10.ml.infer.expected
File "0110_core_and_int_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0110_core_and_int_10 is not a valid module name.

File "0110_core_and_int_10.ml", line 2, characters 40-41:
2 | let _ = let _ignore = false in (true && 0)
                                            ^
Error: The constant 0 has type int but an expression was expected of type
         bool
