packages/typ/tests/fixtures/diagnostics/0110_core_and_int_10.ml
let ( && ) (x : bool) (y : bool) : bool = x
let _ = let _ignore = false in (true && 0)
